Fix Google's one-tap horizontal scroll-bar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -189,3 +189,8 @@ iframe {
   /* For Fixing Google's one tap styles issues on dark mode */
   color-scheme: light;
 }
+
+/* To Fix Google's Unwanted Horizontal Scrollbar */
+#g_a11y_announcement {
+  inset-inline-start: -10000px !important;
+}
